# ccgo

./: .gitignore  CMakeLists.txt  README.md  foo.go  foo_vanilla.go  go.mod
c_cpp/: cwrap.cc  foo.cpp  foo.h  foo.hpp
